modified staging sites

--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -3,7 +3,7 @@
 # Define accompanying passwords/secrets in group_vars/staging/vault.yml
 
 wordpress_sites:
-  adams.re:
+  tomtech.xyz:
     site_hosts:
       - canonical: tomtech.xyz
         redirects:
