--- a/site/composer.json
+++ b/site/composer.json
@@ -36,7 +36,6 @@
     "php": ">=5.6",
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.7.3",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wp-sync-db/wp-sync-db": "dev-master@dev",
@@ -50,7 +49,8 @@
     "wpackagist-plugin/yith-woocommerce-wishlist":"@stable",
     "wpackagist-plugin/p3-profiler":"@stable",
     "wpackagist-plugin/favicon-by-realfavicongenerator": "@stable",
-    "wpackagist-plugin/regenerate-thumbnails": "@stable"
+    "wpackagist-plugin/regenerate-thumbnails": "@stable",
+    "johnpbloch/wordpress": "^4.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
