--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -3,11 +3,11 @@
 # Define accompanying passwords/secrets in group_vars/staging/vault.yml
 
 wordpress_sites:
-  tomtech.xyz:
+  tomcheung.xyz:
     site_hosts:
-      - canonical: tomtech.xyz
+      - canonical: tomcheung.xyz
         redirects:
-          - www.tomtech.xyz
+          - www.tomcheung.xyz
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
     repo: git@github.com:kaitung123/adams.re.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
@@ -15,7 +15,7 @@ wordpress_sites:
     multisite:
       enabled: false
     ssl:
-      enabled: false
+      enabled: true
       provider: letsencrypt
     cache:
       enabled: true
